--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <main>
     <load src="partials/hero.html" />
     <load src="partials/about.html" />
-    <load src="partials/ouryachts.html" />
+    <load src="partials/ourhorse.html" />
     <load src="partials/advantages.html" />
     <load src="partials/rent.html" />
     <load src="partials/reviews.html" />
